# ChangeLog for net-dns/pdns-recursor
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/pdns-recursor/ChangeLog,v 1.40 2012/12/06 04:05:23 phajdan.jr Exp $

  06 Dec 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  pdns-recursor-3.3.ebuild:
  x86 stable wrt bug #445710

  03 Dec 2012; <ago@gentoo.org> pdns-recursor-3.3.ebuild:
  Stable for amd64, wrt bug #445710

  04 Dec 2011; Sven Wegener <swegener@gentoo.org> files/precursor:
  move ping to extra_started_commands

*pdns-recursor-3.3 (15 Jan 2011)

  15 Jan 2011; Sven Wegener <swegener@gentoo.org> +pdns-recursor-3.3.ebuild:
  Version bump, bug #350540.

*pdns-recursor-3.2 (08 Mar 2010)

  08 Mar 2010; Sven Wegener <swegener@gentoo.org> +pdns-recursor-3.2.ebuild:
  Version bump.

  21 Feb 2010; Sven Wegener <swegener@gentoo.org>
  -pdns-recursor-3.1.7.ebuild,
  -files/pdns-recursor-3.1.7-boost-1.37.0.patch,
  -pdns-recursor-3.1.7.1.ebuild,
  -files/pdns-recursor-3.1.7.1-error-message.patch,
  -files/pdns-recursor-3.1.7-error-message.patch:
  Cleanup.

  01 Feb 2010; Markus Meier <maekke@gentoo.org>
  pdns-recursor-3.1.7.2.ebuild:
  amd64 stable, bug #299942

  10 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  pdns-recursor-3.1.7.2.ebuild:
  stable x86, security bug 299942

*pdns-recursor-3.1.7.2 (08 Jan 2010)

  08 Jan 2010; Sven Wegener <swegener@gentoo.org>
  +pdns-recursor-3.1.7.2.ebuild,
  +files/pdns-recursor-3.1.7.2-error-message.patch:
  Version bump, security bug #299942.

  14 Nov 2009; Sven Wegener <swegener@gentoo.org>
  pdns-recursor-3.1.7.ebuild, pdns-recursor-3.1.7.1.ebuild:
  Move boost to DEPEND-only, bug #293076.

*pdns-recursor-3.1.7.1 (03 Aug 2009)

  03 Aug 2009; Sven Wegener <swegener@gentoo.org>
  +pdns-recursor-3.1.7.1.ebuild,
  +files/pdns-recursor-3.1.7.1-error-message.patch:
  Version bump.

  04 Jul 2009; Sven Wegener <swegener@gentoo.org>
  -pdns-recursor-3.1.6.ebuild, -files/pdns-recursor-3.1.6-gcc-4.3.patch:
  Cleanup.