@@ -7,15 +7,17 @@ AUX recursor.conf 452 SHA256 b36b3310a26785d5e8a38c03bce9afcf8a08e321a81ee385e95
 DIST pdns-recursor-3.1.7.2.tar.bz2 174082 SHA256 0f2fd93eec8d7c68578fbf1f680f6d1ab44c3249f0a08257a4e6531e48a9d2ea
 DIST pdns-recursor-3.2.tar.bz2 139569 SHA256 1994140bf0816ef16fe5c8fe9956737a8f7445041adc3d8bc4d0795b2c50c0de
 DIST pdns-recursor-3.3.tar.bz2 145785 SHA256 7b62d97f2bb02bb0ba366dabb5e504338b949a572b9062ec2198012fc3b525bc SHA512 44ffa8567f7551b34dae3326c4998c6ff5439c60fa6076e680477f5cd7e9dfa2e3deaea79e9c0ab59391c9166931a54bba0c11b8222a2e0a2f2e65d74f98a067 WHIRLPOOL 2424358ff0742bb86fb44140afb22e6bcb3d4486309d3dd98033389d7091eeb5227a05626f7e49f966881497186576b9af9ee1c2dfb52536641b2c93b6ad9260
+DIST pdns-recursor-3.5.1.tar.bz2 176413 SHA256 30655996d1963e259d4fc8648184031bf9cb83f64510d0b00539d3ce698b2824 SHA512 9bc7b293ce38060d3cce48b246fe6d0168c04e387fbe8cbd9511649b53e8d922caed419b0f6bd0cc98d66a11a1f9af54b6c96ac04903b4b068d8d6d560f7d4fd WHIRLPOOL 8f0358c83b1bc3178169390170a2d2d06dbc2aa1946d9f77999a4dcf3d5f5393477d3e71800736a2628187ac84bbbe2d88508c38780e8cda2efee578d4ef7529
 EBUILD pdns-recursor-3.1.7.2.ebuild 1376 SHA256 547a96290f9127d7830476724a2cffef6bf641b70f18342e0b93b3ea639bebed SHA512 29ea0aad2bbdd6a4a04a74ff0016b51e2d34d51c4789c6054c86a0744da972247db24f36ed70257a084b32bc8c7d14cca3004cd6b8a8ced0ad510ab27201cbfe WHIRLPOOL 88a4df60245109b1a0bff3f2026f90f84d5136989ab32b93c44d132d55c351685d7dd8edc36a774c96d59532167c04c426ae30bf24bd25a515c760d8be293a43
 EBUILD pdns-recursor-3.2.ebuild 1398 SHA256 55a41b8f6359d57ee99c9b1495c5098b3526659e18543bd4373f938f2d93c9d3 SHA512 00c78238ecae8afb6d7243fed26f97ab46541c7a0a2c30edc2eddb1413941d57188868a52c73d90e02385c41aa21cc2351998f113ce733126d1fa564d2375cb5 WHIRLPOOL ba871454d91616c83464cc068861b6508cddadd5bf253a615599ea597195205853cb00e675a3866d7f7b12a51f1c2ce60c9871ea78ceafea80ba63a34c948fa5
 EBUILD pdns-recursor-3.3.ebuild 1398 SHA256 88c17c9baa8cda3e9d4a9e67cd07d6c1e1d7af882939bb047395b3c094f1fe5b SHA512 713d1f4d97d57d3b9225fdaba6d65987632c0247ad313c697f9277dfeac93313746f21f9f834179b8fa01115d779fd366d19f9d835196dca14dca207dfa6bf0c WHIRLPOOL ca8c1fc52ae393d281353781a1adf6b9f0ebbf87698794c03fa890dec5f05cec782ab181572cd6760c6acef0d6ca8c836dd3177fe246a110a1991394fb489efe
-MISC ChangeLog 6443 SHA256 d0709b422b89e8138dce948968997fe8e20b40301c65827cbd6bc47120d94bb2 SHA512 12e688461a7b7a1477c0e4f357fd867519fb55a9b50bbdac7d91ace2f0a2d5e10a35d08827276ab088171b65127594764327908691f2702ddacb0e49a3fc49cc WHIRLPOOL a0e69e28974edcda6175cb9f45e385da17119570ff5264f164070e7787d115479c44472f32bd5926deed72a8ecc261a30d4c0989e03e11c24cb3c8a8210d464d
+EBUILD pdns-recursor-3.5.1.ebuild 1283 SHA256 3f1306eed86b5f702f267ed3f1d86105c2ff2c302abaa888477b5b83dcd36079 SHA512 191e1fc206acb3e208dc9d0149143a105e1e196829655c84a8db8da72cb21556e4d9a5e00f3a1990bba02aec5122d49d7ea61db4bd1148992059ba5ae7162d85 WHIRLPOOL a58b66594ed42967b08b70bdaa4d830dffa3ac452e0d31e532790a0ab7f50a8870acb2e9024d069b23cbeb688cb29af52499217ad42dfa13a152114629f93c25
+MISC ChangeLog 6595 SHA256 e3629a6ebb370d7bc2e17a9a93de41c33761a3e0652ce913ea5a91c275ae596e SHA512 f90a0236ab3b23da85f42f7e46d2ec0416dd605ff703d034c38d67fca71aa933325b163a8a28ff772ef248260e972ad1ce22c45361925563f2de25f40a428b26 WHIRLPOOL aa1a25d4068542a2a64f30c11d721af18587d429964461b9abf6bd3d08b334114930a91d7cf09fe532b04af3f92cc6ec5c2e8cd62261cb3dc98ae558e973e92c
 MISC metadata.xml 816 SHA256 823df6ce02714ac732203b18964ed5d7a60ea1bf8a7d58ad8271307dc5d4b520 SHA512 24c7ebfd35accfcfa658f17ab2482589cfa0cf49f9928af9fc420414b83e4ef31fc2ddb6a823513fb48de4d075e833169e8a3946f96e3e09e602a6aa177658cb WHIRLPOOL 985daca0021bc9bd73ffa2aa98976ed5eeb479ff179fe417d90d962b005f0a5ff4d2d723361738a0a8815823f2108d1899b23607b0b8d73bc9d35ec25950cf9b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlDAGYcACgkQuUQtlDBCeQI32QCfcLxfZqUOyL27y0/5qZfXsMVs
-E04An1Y/NcWrxCP0/KLIrFosqVYpG2bo
-=dcIn
+iEYEAREIAAYFAlGFdZ0ACgkQI1lqEGTUzyQ6bwCgx9qKfowAoIWAw14CoAfyn7xL
+L94Ani763s11SxAamKfoI2on8Tl4Gyis
+=6tH9
 -----END PGP SIGNATURE-----
