@@ -1,6 +1,11 @@
 # ChangeLog for net-dns/pdns-recursor
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/pdns-recursor/ChangeLog,v 1.40 2012/12/06 04:05:23 phajdan.jr Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-dns/pdns-recursor/ChangeLog,v 1.41 2013/05/04 20:54:57 swegener Exp $
+
+*pdns-recursor-3.5.1 (04 May 2013)
+
+  04 May 2013; Sven Wegener <swegener@gentoo.org> +pdns-recursor-3.5.1.ebuild:
+  Version bump, security bug #404377.
 
   06 Dec 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   pdns-recursor-3.3.ebuild:
